# go-mongo-example

first_rust/: Cargo.toml
first_rust/src/: main.rs
