[package]
name = "first_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
minijinja= "*"
serde = { version = "*", features = ["derive"] }
serde_json = "1.0.83"
mongodb = {version = "2.3.0", features = ["tokio-sync"]}
bson = "2.4.0"
chrono = {version = "0.4.12", features = ["serde"]}
hyper = { version = "0.14.20", features = ["server"] }
formdata = "0.13.0"
futures = "0.3"
lazy_static = "1.4.0"
dotenv = "0.15.0"
#sdotenv_codegen = "0.15.0"
